src/DynamoDbGrammarParser.js
/*
 * Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"). You may not 
 * use this file except in compliance with the License. A copy of the License 
 * is located at
 *
 *    http://aws.amazon.com/apache2.0/
 *
 * or in the "license" file accompanying this file. This file is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
 * express or implied. See the License for the specific language governing 
 * permissions and limitations under the License.
 */
// Generated from DynamoDbGrammar.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var DynamoDbGrammarListener = require('./DynamoDbGrammarListener').DynamoDbGrammarListener;
var grammarFileName = "DynamoDbGrammar.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "','", "'('", "')'", "'.'", "'['", "']'", null, 
                     "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'" ];

var symbolicNames = [ null, null, null, null, null, null, null, "WS", "EQ", 
                      "NE", "LT", "LE", "GT", "GE", "PLUS", "MINUS", "IN", 
                      "BETWEEN", "NOT", "AND", "OR", "SET", "ADD", "DELETE", 
                      "REMOVE", "INDEX", "ID", "ATTRIBUTE_NAME_SUB", "LITERAL_SUB", 
                      "STRING_LITERAL", "UNKNOWN" ];

var ruleNames =  [ "projection_", "projection", "condition_", "condition", 
                   "comparator_symbol", "update_", "update", "set_section", 
                   "set_action", "add_section", "add_action", "delete_section", 
                   "delete_action", "remove_section", "remove_action", "set_value", 
                   "arithmetic", "operand", "func", "path", "id", "dereference", 
                   "literal", "expression_attr_names_sub", "expression_attr_values_sub", 
                   "unknown" ];

function DynamoDbGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;

	//    private static void validateRedundantParentheses(boolean redundantParens) {
	    this.validateRedundantParentheses = function(redundantParens) {
	        if (redundantParens) {
	//            throw new RedundantParenthesesException();
	              throw new Error('RedundantParenthesesException')
	        }
	    }

    return this;
}

DynamoDbGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
DynamoDbGrammarParser.prototype.constructor = DynamoDbGrammarParser;

Object.defineProperty(DynamoDbGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

DynamoDbGrammarParser.EOF = antlr4.Token.EOF;
DynamoDbGrammarParser.T__0 = 1;
DynamoDbGrammarParser.T__1 = 2;
DynamoDbGrammarParser.T__2 = 3;
DynamoDbGrammarParser.T__3 = 4;
DynamoDbGrammarParser.T__4 = 5;
DynamoDbGrammarParser.T__5 = 6;
DynamoDbGrammarParser.WS = 7;
DynamoDbGrammarParser.EQ = 8;
DynamoDbGrammarParser.NE = 9;
DynamoDbGrammarParser.LT = 10;
DynamoDbGrammarParser.LE = 11;
DynamoDbGrammarParser.GT = 12;
DynamoDbGrammarParser.GE = 13;
DynamoDbGrammarParser.PLUS = 14;
DynamoDbGrammarParser.MINUS = 15;
DynamoDbGrammarParser.IN = 16;
DynamoDbGrammarParser.BETWEEN = 17;
DynamoDbGrammarParser.NOT = 18;
DynamoDbGrammarParser.AND = 19;
DynamoDbGrammarParser.OR = 20;
DynamoDbGrammarParser.SET = 21;
DynamoDbGrammarParser.ADD = 22;
DynamoDbGrammarParser.DELETE = 23;
DynamoDbGrammarParser.REMOVE = 24;
DynamoDbGrammarParser.INDEX = 25;
DynamoDbGrammarParser.ID = 26;
DynamoDbGrammarParser.ATTRIBUTE_NAME_SUB = 27;
DynamoDbGrammarParser.LITERAL_SUB = 28;
DynamoDbGrammarParser.STRING_LITERAL = 29;
DynamoDbGrammarParser.UNKNOWN = 30;

DynamoDbGrammarParser.RULE_projection_ = 0;
DynamoDbGrammarParser.RULE_projection = 1;
DynamoDbGrammarParser.RULE_condition_ = 2;
DynamoDbGrammarParser.RULE_condition = 3;
DynamoDbGrammarParser.RULE_comparator_symbol = 4;
DynamoDbGrammarParser.RULE_update_ = 5;
DynamoDbGrammarParser.RULE_update = 6;
DynamoDbGrammarParser.RULE_set_section = 7;
DynamoDbGrammarParser.RULE_set_action = 8;
DynamoDbGrammarParser.RULE_add_section = 9;
DynamoDbGrammarParser.RULE_add_action = 10;
DynamoDbGrammarParser.RULE_delete_section = 11;
DynamoDbGrammarParser.RULE_delete_action = 12;
DynamoDbGrammarParser.RULE_remove_section = 13;
DynamoDbGrammarParser.RULE_remove_action = 14;
DynamoDbGrammarParser.RULE_set_value = 15;
DynamoDbGrammarParser.RULE_arithmetic = 16;
DynamoDbGrammarParser.RULE_operand = 17;
DynamoDbGrammarParser.RULE_func = 18;
DynamoDbGrammarParser.RULE_path = 19;
DynamoDbGrammarParser.RULE_id = 20;
DynamoDbGrammarParser.RULE_dereference = 21;
DynamoDbGrammarParser.RULE_literal = 22;
DynamoDbGrammarParser.RULE_expression_attr_names_sub = 23;
DynamoDbGrammarParser.RULE_expression_attr_values_sub = 24;
DynamoDbGrammarParser.RULE_unknown = 25;

function Projection_Context(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DynamoDbGrammarParser.RULE_projection_;
    return this;
}

Projection_Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Projection_Context.prototype.constructor = Projection_Context;

Projection_Context.prototype.projection = function() {
    return this.getTypedRuleContext(ProjectionContext,0);
};

Projection_Context.prototype.EOF = function() {
    return this.getToken(DynamoDbGrammarParser.EOF, 0);
};

Projection_Context.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterProjection_(this);
	}
};

Projection_Context.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitProjection_(this);
	}
};




DynamoDbGrammarParser.Projection_Context = Projection_Context;

DynamoDbGrammarParser.prototype.projection_ = function() {

    var localctx = new Projection_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 0, DynamoDbGrammarParser.RULE_projection_);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 52;
        this.projection();
        this.state = 53;
        this.match(DynamoDbGrammarParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ProjectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DynamoDbGrammarParser.RULE_projection;
    return this;
}

ProjectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProjectionContext.prototype.constructor = ProjectionContext;

ProjectionContext.prototype.path = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PathContext);
    } else {
        return this.getTypedRuleContext(PathContext,i);
    }
};

ProjectionContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterProjection(this);
	}
};

ProjectionContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitProjection(this);
	}
};




DynamoDbGrammarParser.ProjectionContext = ProjectionContext;

DynamoDbGrammarParser.prototype.projection = function() {

    var localctx = new ProjectionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, DynamoDbGrammarParser.RULE_projection);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.path();
        this.state = 60;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===DynamoDbGrammarParser.T__0) {
            this.state = 56;
            this.match(DynamoDbGrammarParser.T__0);
            this.state = 57;
            this.path();
            this.state = 62;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Condition_Context(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DynamoDbGrammarParser.RULE_condition_;
    return this;
}

Condition_Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Condition_Context.prototype.constructor = Condition_Context;

Condition_Context.prototype.condition = function() {
    return this.getTypedRuleContext(ConditionContext,0);
};

Condition_Context.prototype.EOF = function() {
    return this.getToken(DynamoDbGrammarParser.EOF, 0);
};

Condition_Context.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterCondition_(this);
	}
};

Condition_Context.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitCondition_(this);
	}
};




DynamoDbGrammarParser.Condition_Context = Condition_Context;

DynamoDbGrammarParser.prototype.condition_ = function() {

    var localctx = new Condition_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 4, DynamoDbGrammarParser.RULE_condition_);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.condition(0);
        this.state = 64;
        this.match(DynamoDbGrammarParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConditionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DynamoDbGrammarParser.RULE_condition;
    this.hasOuterParens = false
    return this;
}

ConditionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConditionContext.prototype.constructor = ConditionContext;


 
ConditionContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
    this.hasOuterParens = ctx.hasOuterParens;
};

function OrContext(parser, ctx) {
	ConditionContext.call(this, parser);
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

OrContext.prototype = Object.create(ConditionContext.prototype);
OrContext.prototype.constructor = OrContext;

DynamoDbGrammarParser.OrContext = OrContext;

OrContext.prototype.condition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConditionContext);
    } else {
        return this.getTypedRuleContext(ConditionContext,i);
    }
};

OrContext.prototype.OR = function() {
    return this.getToken(DynamoDbGrammarParser.OR, 0);
};
OrContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterOr(this);
	}
};

OrContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitOr(this);
	}
};


function NegationContext(parser, ctx) {
	ConditionContext.call(this, parser);
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NegationContext.prototype = Object.create(ConditionContext.prototype);
NegationContext.prototype.constructor = NegationContext;

DynamoDbGrammarParser.NegationContext = NegationContext;

NegationContext.prototype.NOT = function() {
    return this.getToken(DynamoDbGrammarParser.NOT, 0);
};

NegationContext.prototype.condition = function() {
    return this.getTypedRuleContext(ConditionContext,0);
};
NegationContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterNegation(this);
	}
};

NegationContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitNegation(this);
	}
};


function InContext(parser, ctx) {
	ConditionContext.call(this, parser);
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

InContext.prototype = Object.create(ConditionContext.prototype);
InContext.prototype.constructor = InContext;

DynamoDbGrammarParser.InContext = InContext;

InContext.prototype.operand = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OperandContext);
    } else {
        return this.getTypedRuleContext(OperandContext,i);
    }
};

InContext.prototype.IN = function() {
    return this.getToken(DynamoDbGrammarParser.IN, 0);
};
InContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterIn(this);
	}
};

InContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitIn(this);
	}
};


function AndContext(parser, ctx) {
	ConditionContext.call(this, parser);
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AndContext.prototype = Object.create(ConditionContext.prototype);
AndContext.prototype.constructor = AndContext;

DynamoDbGrammarParser.AndContext = AndContext;

AndContext.prototype.condition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConditionContext);
    } else {
        return this.getTypedRuleContext(ConditionContext,i);
    }
};

AndContext.prototype.AND = function() {
    return this.getToken(DynamoDbGrammarParser.AND, 0);
};
AndContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterAnd(this);
	}
};

AndContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitAnd(this);
	}
};


function BetweenContext(parser, ctx) {
	ConditionContext.call(this, parser);
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BetweenContext.prototype = Object.create(ConditionContext.prototype);
BetweenContext.prototype.constructor = BetweenContext;

DynamoDbGrammarParser.BetweenContext = BetweenContext;

BetweenContext.prototype.operand = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OperandContext);
    } else {
        return this.getTypedRuleContext(OperandContext,i);
    }
};

BetweenContext.prototype.BETWEEN = function() {
    return this.getToken(DynamoDbGrammarParser.BETWEEN, 0);
};

BetweenContext.prototype.AND = function() {
    return this.getToken(DynamoDbGrammarParser.AND, 0);
};
BetweenContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterBetween(this);
	}
};

BetweenContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitBetween(this);
	}
};


function FunctionConditionContext(parser, ctx) {
	ConditionContext.call(this, parser);
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

FunctionConditionContext.prototype = Object.create(ConditionContext.prototype);
FunctionConditionContext.prototype.constructor = FunctionConditionContext;

DynamoDbGrammarParser.FunctionConditionContext = FunctionConditionContext;

FunctionConditionContext.prototype.func = function() {
    return this.getTypedRuleContext(FuncContext,0);
};
FunctionConditionContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterFunctionCondition(this);
	}
};

FunctionConditionContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitFunctionCondition(this);
	}
};


function ComparatorContext(parser, ctx) {
	ConditionContext.call(this, parser);
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ComparatorContext.prototype = Object.create(ConditionContext.prototype);
ComparatorContext.prototype.constructor = ComparatorContext;

DynamoDbGrammarParser.ComparatorContext = ComparatorContext;

ComparatorContext.prototype.operand = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OperandContext);
    } else {
        return this.getTypedRuleContext(OperandContext,i);
    }
};

ComparatorContext.prototype.comparator_symbol = function() {
    return this.getTypedRuleContext(Comparator_symbolContext,0);
};
ComparatorContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterComparator(this);
	}
};

ComparatorContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitComparator(this);
	}
};


function ConditionGroupingContext(parser, ctx) {
	ConditionContext.call(this, parser);
    this.c = null; // ConditionContext;
    ConditionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ConditionGroupingContext.prototype = Object.create(ConditionContext.prototype);
ConditionGroupingContext.prototype.constructor = ConditionGroupingContext;

DynamoDbGrammarParser.ConditionGroupingContext = ConditionGroupingContext;

ConditionGroupingContext.prototype.condition = function() {
    return this.getTypedRuleContext(ConditionContext,0);
};
ConditionGroupingContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterConditionGrouping(this);
	}
};

ConditionGroupingContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitConditionGrouping(this);
	}
};



DynamoDbGrammarParser.prototype.condition = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ConditionContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 6;
    this.enterRecursionRule(localctx, 6, DynamoDbGrammarParser.RULE_condition, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 98;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            localctx = new ComparatorContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 67;
            this.operand();
            this.state = 68;
            this.comparator_symbol();
            this.state = 69;
            this.operand();
            break;

        case 2:
            localctx = new InContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 71;
            this.operand();
            this.state = 72;
            this.match(DynamoDbGrammarParser.IN);
            this.state = 73;
            this.match(DynamoDbGrammarParser.T__1);
            this.state = 74;
            this.operand();
            this.state = 79;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===DynamoDbGrammarParser.T__0) {
                this.state = 75;
                this.match(DynamoDbGrammarParser.T__0);
                this.state = 76;
                this.operand();
                this.state = 81;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 82;
            this.match(DynamoDbGrammarParser.T__2);
            break;

        case 3:
            localctx = new BetweenContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 84;
            this.operand();
            this.state = 85;
            this.match(DynamoDbGrammarParser.BETWEEN);
            this.state = 86;
            this.operand();
            this.state = 87;
            this.match(DynamoDbGrammarParser.AND);
            this.state = 88;
            this.operand();
            break;

        case 4:
            localctx = new FunctionConditionContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 90;
            this.func();
            break;

        case 5:
            localctx = new ConditionGroupingContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 91;
            this.match(DynamoDbGrammarParser.T__1);
            this.state = 92;
            localctx.c = this.condition(0);
            this.state = 93;
            this.match(DynamoDbGrammarParser.T__2);

                        this.validateRedundantParentheses(localctx.c.hasOuterParens);
                        localctx.hasOuterParens = true
                    
            break;

        case 6:
            localctx = new NegationContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 96;
            this.match(DynamoDbGrammarParser.NOT);
            this.state = 97;
            this.condition(3);
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 108;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 106;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new AndContext(this, new ConditionContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, DynamoDbGrammarParser.RULE_condition);
                    this.state = 100;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 101;
                    this.match(DynamoDbGrammarParser.AND);
                    this.state = 102;
                    this.condition(3);
                    break;

                case 2:
                    localctx = new OrContext(this, new ConditionContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, DynamoDbGrammarParser.RULE_condition);
                    this.state = 103;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 104;
                    this.match(DynamoDbGrammarParser.OR);
                    this.state = 105;
                    this.condition(2);
                    break;

                } 
            }
            this.state = 110;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function Comparator_symbolContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DynamoDbGrammarParser.RULE_comparator_symbol;
    return this;
}

Comparator_symbolContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Comparator_symbolContext.prototype.constructor = Comparator_symbolContext;


Comparator_symbolContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterComparator_symbol(this);
	}
};

Comparator_symbolContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitComparator_symbol(this);
	}
};




DynamoDbGrammarParser.Comparator_symbolContext = Comparator_symbolContext;

DynamoDbGrammarParser.prototype.comparator_symbol = function() {

    var localctx = new Comparator_symbolContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, DynamoDbGrammarParser.RULE_comparator_symbol);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << DynamoDbGrammarParser.EQ) | (1 << DynamoDbGrammarParser.NE) | (1 << DynamoDbGrammarParser.LT) | (1 << DynamoDbGrammarParser.LE) | (1 << DynamoDbGrammarParser.GT) | (1 << DynamoDbGrammarParser.GE))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Update_Context(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DynamoDbGrammarParser.RULE_update_;
    return this;
}

Update_Context.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Update_Context.prototype.constructor = Update_Context;

Update_Context.prototype.update = function() {
    return this.getTypedRuleContext(UpdateContext,0);
};

Update_Context.prototype.EOF = function() {
    return this.getToken(DynamoDbGrammarParser.EOF, 0);
};

Update_Context.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterUpdate_(this);
	}
};

Update_Context.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitUpdate_(this);
	}
};




DynamoDbGrammarParser.Update_Context = Update_Context;

DynamoDbGrammarParser.prototype.update_ = function() {

    var localctx = new Update_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 10, DynamoDbGrammarParser.RULE_update_);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.update();
        this.state = 114;
        this.match(DynamoDbGrammarParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function UpdateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DynamoDbGrammarParser.RULE_update;
    return this;
}

UpdateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
UpdateContext.prototype.constructor = UpdateContext;

UpdateContext.prototype.set_section = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Set_sectionContext);
    } else {
        return this.getTypedRuleContext(Set_sectionContext,i);
    }
};

UpdateContext.prototype.add_section = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Add_sectionContext);
    } else {
        return this.getTypedRuleContext(Add_sectionContext,i);
    }
};

UpdateContext.prototype.delete_section = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Delete_sectionContext);
    } else {
        return this.getTypedRuleContext(Delete_sectionContext,i);
    }
};

UpdateContext.prototype.remove_section = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Remove_sectionContext);
    } else {
        return this.getTypedRuleContext(Remove_sectionContext,i);
    }
};

UpdateContext.prototype.enterRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.enterUpdate(this);
	}
};

UpdateContext.prototype.exitRule = function(listener) {
    if(listener instanceof DynamoDbGrammarListener ) {
        listener.exitUpdate(this);
	}
};




DynamoDbGrammarParser.UpdateContext = UpdateContext;

DynamoDbGrammarParser.prototype.update = function() {
